Refactor code structure for improved readability and maintainability

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Mural",
-  "name": "A simple design editor",
+  "short_name": "Marketifyall",
+  "name": "Marketifyall Design Editor - Create stunning designs with ease",
   "icons": [
     {
       "src": "logo.png",
