--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@nkyo/scenify-sdk": "^0.3.4",
     "@reduxjs/toolkit": "^1.6.2",
+    "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/supabase-js": "^2.50.2",
     "@types/css-font-loading-module": "^0.0.6",
     "@types/i18next": "^13.0.0",
     "@types/react-router-dom": "^5.1.8",
@@ -64,8 +67,8 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "17.0.44",
-    "@types/react-dom": "17.0.17",
     "@types/react-color": "^3.0.4",
+    "@types/react-dom": "17.0.17",
     "prettier": "^2.2.1",
     "typescript": "^4.1.2"
   },
