--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "marketifyall-design-editor",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "dependencies": {
     "@nkyo/scenify-sdk": "^0.3.4",
     "@reduxjs/toolkit": "^1.6.2",
